--- a/Labb4/Labb4/Labb4.csproj
+++ b/Labb4/Labb4/Labb4.csproj
@@ -52,22 +52,21 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\MongoContext.cs" />
-    <Compile Include="Controllers\AccountsController.cs" />
-    <Compile Include="Controllers\AllowedPicturesControllers.cs" />
-    <Compile Include="Controllers\PicturesControllers.cs" />
-    <Compile Include="Models\Account.cs" />
-    <Compile Include="Models\AllowedPictures.cs" />
-    <Compile Include="Models\Pictures.cs" />
+    <Compile Include="Controllers\PictureUserController.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\PictureControllers.cs" />
+    <Compile Include="Models\PictureUser.cs" />
+    <Compile Include="Models\Admin.cs" />
+    <Compile Include="Models\Picture.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\MainView.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Views\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Azure.DocumentDB.1.19.1\build\Microsoft.Azure.DocumentDB.targets" Condition="Exists('..\packages\Microsoft.Azure.DocumentDB.1.19.1\build\Microsoft.Azure.DocumentDB.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
