--- a/Labb4/Labb4/Labb4.csproj
+++ b/Labb4/Labb4/Labb4.csproj
@@ -54,13 +54,17 @@
     <Compile Include="App_Start\MongoContext.cs" />
     <Compile Include="Controllers\PictureUserController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
-    <Compile Include="Controllers\PictureControllers.cs" />
+    <Compile Include="Controllers\PictureController.cs" />
     <Compile Include="Models\PictureUser.cs" />
     <Compile Include="Models\Admin.cs" />
     <Compile Include="Models\Picture.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\AdminService.cs" />
+    <Compile Include="Services\UserService.cs" />
+    <Compile Include="Views\AdminView.cs" />
     <Compile Include="Views\MainView.cs" />
+    <Compile Include="Views\UsersView.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
