--- a/Labb4/PictureFunction/PictureFunction.csproj
+++ b/Labb4/PictureFunction/PictureFunction.csproj
@@ -1,6 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net461</TargetFramework>
+    <StartupObject />
+    <ApplicationIcon />
+    <OutputType>Library</OutputType>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.6" />
